--- a/posts/2023-07-07-parsl-sheet/index.ipynb
+++ b/posts/2023-07-07-parsl-sheet/index.ipynb
@@ -2,7 +2,6 @@
   "cells": [
     {
       "cell_type": "raw",
-      "id": "fb38a63c",
       "metadata": {},
       "source": [
         "---\n",
@@ -10,92 +9,63 @@
         "author: \"Laura Vairus\"\n",
         "date: \"07-07-2023\"\n",
         "---"
-      ]
+      ],
+      "id": "42b9d7c1"
     },
     {
       "cell_type": "markdown",
-      "id": "ad0548fa",
       "metadata": {},
       "source": [
-        "### Imports"
-      ]
+        "### Imports\n"
+      ],
+      "id": "03edf651"
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
-      "id": "0f4f08e3",
-      "metadata": {
-        "vscode": {
-          "languageId": "python"
-        }
-      },
-      "outputs": [],
+      "metadata": {},
       "source": [
         "import parsl\n",
         "from parsl.app.app import python_app, bash_app"
-      ]
+      ],
+      "id": "0542a41f",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
-      "id": "414616b9",
       "metadata": {},
       "source": [
-        "### Making a python function parallelizable:"
-      ]
+        "### Making a python function parallelizable:\n"
+      ],
+      "id": "1b6a9cf5"
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
-      "id": "ffb13324",
-      "metadata": {
-        "vscode": {
-          "languageId": "python"
-        }
-      },
-      "outputs": [
-        {
-          "ename": "RuntimeError",
-          "evalue": "Must first load config",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-            "Cell \u001b[0;32mIn[2], line 8\u001b[0m\n\u001b[1;32m      5\u001b[0m   \u001b[39mreturn\u001b[39;00m param\n\u001b[1;32m      7\u001b[0m \u001b[39m# call function normally and it will be run async\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m my_func(\u001b[39m'\u001b[39;49m\u001b[39mparam\u001b[39;49m\u001b[39m'\u001b[39;49m) \n",
-            "File \u001b[0;32m~/.local/polaris/conda/2023-01-10-unstable/lib/python3.10/site-packages/parsl/app/python.py:66\u001b[0m, in \u001b[0;36mPythonApp.__call__\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m     63\u001b[0m invocation_kwargs\u001b[39m.\u001b[39mupdate(kwargs)\n\u001b[1;32m     65\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata_flow_kernel \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m---> 66\u001b[0m     dfk \u001b[39m=\u001b[39m DataFlowKernelLoader\u001b[39m.\u001b[39;49mdfk()\n\u001b[1;32m     67\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m     68\u001b[0m     dfk \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdata_flow_kernel\n",
-            "File \u001b[0;32m~/.local/polaris/conda/2023-01-10-unstable/lib/python3.10/site-packages/parsl/dataflow/dflow.py:1432\u001b[0m, in \u001b[0;36mDataFlowKernelLoader.dfk\u001b[0;34m(cls)\u001b[0m\n\u001b[1;32m   1430\u001b[0m \u001b[39m\u001b[39m\u001b[39m\"\"\"Return the currently-loaded DataFlowKernel.\"\"\"\u001b[39;00m\n\u001b[1;32m   1431\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mcls\u001b[39m\u001b[39m.\u001b[39m_dfk \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[0;32m-> 1432\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(\u001b[39m'\u001b[39m\u001b[39mMust first load config\u001b[39m\u001b[39m'\u001b[39m)\n\u001b[1;32m   1433\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mcls\u001b[39m\u001b[39m.\u001b[39m_dfk\n",
-            "\u001b[0;31mRuntimeError\u001b[0m: Must first load config"
-          ]
-        }
-      ],
+      "metadata": {},
       "source": [
         "@python_app\n",
-        "def my_func(param):\n",
+        "def py_func(param):\n",
         "  # import any packages you need\n",
-        "  print(param)\n",
-        "  return param\n",
+        "  # code \n",
         "\n",
         "# call function normally and it will be run async\n",
-        "my_func('param') "
-      ]
+        "my_func(param) "
+      ],
+      "id": "ec60dc23",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
-      "id": "fff85786",
       "metadata": {},
       "source": [
-        "### Making a bash function parallelizable"
-      ]
+        "### Making a bash function parallelizable\n"
+      ],
+      "id": "506e9581"
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "4f76b588",
-      "metadata": {
-        "vscode": {
-          "languageId": "python"
-        }
-      },
-      "outputs": [],
+      "metadata": {},
       "source": [
         "import parsl\n",
         "from parsl.app.app import bash_app\n",
@@ -110,33 +80,30 @@
         "# read the output file\n",
         "with open('output-filename.stdout', 'r') as f:\n",
         "     print(f.read())"
-      ]
+      ],
+      "id": "2e4bcf20",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
-      "id": "85541f3d",
       "metadata": {},
       "source": [
         "### AppFutures\n",
-        "when you run apps that take a long time, instead of getting a variable for your return result, you get an appfuture variable, which holds information about the running code."
-      ]
+        "\n",
+        "when you run apps that take a long time, instead of getting a variable for your return result, you get an appfuture variable, which holds information about the running code.\n"
+      ],
+      "id": "e167d4da"
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "3aa5e6ae",
-      "metadata": {
-        "vscode": {
-          "languageId": "python"
-        }
-      },
-      "outputs": [],
+      "metadata": {},
       "source": [
         "@python_app\n",
         "def func ():\n",
         "    # code\n",
         "\n",
-        "#assigning variable\n",
+        "# assigning variable\n",
         "app_future = func()\n",
         "\n",
         "# boolean on whether the function is finished running or not\n",
@@ -150,27 +117,24 @@
         "\n",
         "# attribute of appfuture, list of all DataFutures of function\n",
         "app_future.outputs"
-      ]
+      ],
+      "id": "0148c2bd",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
-      "id": "80ef01a7",
       "metadata": {},
       "source": [
         "### DataFutures\n",
-        "when you run apps that take a long time that return files, instead of getting the files for your results, you get an datafutures, which can be accessed through your appfuture's attributes, and which contain information about the files you will receive. "
-      ]
+        "\n",
+        "when you run apps that take a long time that return files, instead of getting the files for your results, you get datafutures, which can be accessed through your appfuture's attributes, and which contain information about the files you will receive.\n"
+      ],
+      "id": "f25ca0b0"
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "id": "074df3ad",
-      "metadata": {
-        "vscode": {
-          "languageId": "python"
-        }
-      },
-      "outputs": [],
+      "metadata": {},
       "source": [
         "#assigning variable\n",
         "data_future1 = app_future[0]\n",
@@ -186,24 +150,27 @@
         "\n",
         "# references the parent AppFuture object that produced the data.\n",
         "data_future1.parent"
-      ]
+      ],
+      "id": "0e27fb0b",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
-      "id": "c41b4de5",
       "metadata": {},
       "source": [
         "### dataflowkernel\n",
         "\n",
-        "wip\n"
-      ]
+        "wip"
+      ],
+      "id": "b5dc6249"
     }
   ],
   "metadata": {
     "kernelspec": {
-      "display_name": "Python 3",
+      "name": "python3",
       "language": "python",
-      "name": "python3"
+      "display_name": "Python 3 (ipykernel)"
     }
   },
   "nbformat": 4,
